# qr_code_detector_ros

./: CMakeLists.txt  README.md  nodelets.xml  package.xml
include/qr_code_detector_ros/: qr_detector_nodelet.h
launch/: detector.launch
src/: detector.cpp  qr_detector_nodelet.cpp
