<package format="2">
  <name>qr_code_detector_ros</name>
  <version>1.0.0</version>
  <description>
  QR codes detector based on zbar library (http://zbar.sourceforge.net)
  </description>
  <author email="veerkalburgi@gmail.com">Veer Kalburgi (http://www.mdrwiega.com)</author>
  <maintainer email="veerkalburgi@gmail.com">Veer Kalburgi</maintainer>
  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>zbar</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
